tests/transpiler/x/go/string_in_operator.go
//go:build ignore

// Generated by Mochi v0.10.31 on 2025-07-19 12:25:25 GMT+7
package main

import "fmt"

func main() {
    s := "catch"
    fmt.Println(("cat" in s))
    fmt.Println(("dog" in s))
}
